LoginActivity added. Emails can be detected from system now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <application
         android:allowBackup="true"
@@ -49,6 +50,11 @@
             android:name="com.candeo.app.content.RecordActivity"
             android:label="@string/title_activity_record"
             android:theme="@style/Theme.AppCompat.Dialog" >
+        </activity>
+        <activity
+            android:name="com.candeo.app.user.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
 
         </activity>
     </application>
