--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,19 +20,27 @@
         android:theme="@style/AppTheme.NoActionBar" >
         <activity
             android:name=".SplashActivity"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".home.HomeActivity"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_home" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".home.HomeActivity"
-            android:label="@string/title_activity_home"/>
 
+         </activity>
         <activity
             android:name=".content.ContentActivity"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_content"
             android:parentActivityName=".home.HomeActivity" >
             <meta-data
@@ -41,10 +49,14 @@
         </activity>
         <activity
             android:name=".content.RespondActivity"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_respond" >
         </activity>
         <activity
             android:name=".content.PostActivity"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_post"
             android:parentActivityName=".home.HomeActivity" >
             <meta-data
@@ -53,28 +65,57 @@
         </activity>
         <activity
             android:name=".content.RecordActivity"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_record"
             android:theme="@style/Theme.AppCompat.Dialog" >
         </activity>
         <activity
             android:name=".user.LoginActivity"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
             android:name=".response.GetInspiredActivity"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_get_inspired"
             android:theme="@style/Theme.AppCompat.Light.Dialog" >
         </activity>
         <activity
             android:name=".response.AppreciateActivity"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_appreciate"
             android:theme="@style/Theme.AppCompat.Light.Dialog" >
         </activity>
         <activity
             android:name=".book.BookRenderActivity"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_book_render"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".user.UserVerifyActivity"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/title_activity_user_verify" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http"
+                      android:host="www.candeoapp.com"
+                      android:pathPattern="/.*" />
+            </intent-filter>
+
         </activity>
     </application>
 
