--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
 
-                <category android:name="com.candeo.app.gcm" />
+                <category android:name="com.candeo.app" />
             </intent-filter>
         </receiver>
         <activity
