--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion 22
@@ -8,8 +23,8 @@ android {
         applicationId "com.candeo.app"
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 10
-        versionName "0.10"
+        versionCode 11
+        versionName "0.11"
     }
 
     buildTypes {
@@ -31,5 +46,8 @@ dependencies {
     compile 'com.amplitude:android-sdk:1.6.2'
     compile "com.google.android.gms:play-services:7.5.0"
     compile 'com.android.support:design:22.2.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.4.0@aar') {
+        transitive = true;
+    }
 
 }
