--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -143,6 +143,9 @@
             android:configChanges="keyboard|orientation|screenSize"
             android:label="@string/title_activity_shout" >
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="93a7af1013b1624237767170c5dda708bd5bc914" />
     </application>
 
 </manifest>
