--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,7 @@
 
                 <data
                     android:host="www.candeoapp.com"
-                    android:pathPattern="/content/.*"
+                    android:pathPattern="/c/.*"
                     android:scheme="http" />
             </intent-filter>
 
@@ -135,6 +135,17 @@
             android:label="@string/title_activity_user"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="www.candeoapp.com"
+                    android:pathPattern="/u/.*"
+                    android:scheme="http" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".shout.ShoutActivity"
